--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -32,14 +32,20 @@ h3{
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      margin-bottom: 1.5rem;
 
-      .submit-form{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        margin: 1.5rem 0;
-      }
+      //.submit-form{
+      //  display: flex;
+      //  align-items: center;
+      //  justify-content: center;
+      //  width: 100%;
+      //  margin: 1.5rem 0;
+      // }
+    }
+
+    button{
+      margin: 0 auto;
+      display: block;
     }
   }
 }
@@ -49,6 +55,12 @@ h3{
   border: solid 1px lightgray;
   padding: 1rem 2rem;
   margin-bottom: 1.5rem;
+
+  &:hover{
+    box-shadow: 0 0 10px 2px lightgray;
+
+  }
+
 }
 
 .infos-div{
@@ -107,30 +119,180 @@ h3{
 /* Modal Content/Box */
 .modal-buttons {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 50vh auto;
+  transform: translatey(-50%);
+  width: 35%;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  display: flex;
+  flex-direction: column;
+
+  .closing {
+
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+
+
+  }
+
+  .modal-p{
+    padding: 1.5rem 0;
+  }
+
+  .modal-buttons-div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+
+
+    button{
+      margin-left: .5rem;
+    }
+
+  }
+
 }
 
 #submit-form{
   display: none;
 }
 
-
-/* The Close Button */
-.closing {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+#submit-modify{
+  display: none;
 }
+
+
 
 .closing:hover,
 .closing:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+#my-accordion{
+  padding: 0 2rem;
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.my-accordion {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  border-color: lightgray;
+  outline: none;
+  transition: 1s;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 1rem 0;
+
+  span{
+    color: #2c70a0;
+    font-weight: 700;
+    font-size: 1.75rem;
+    padding-bottom: .3rem;
+    padding-left: 0;
+  }
+
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active {
+  background-color: white;
+  border-bottom: solid 1px lightgray ;
+
+  svg{
+    transform: rotate(180deg);
+  }
+
+}
+
+.my-accordion:hover{
+
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.my-panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+
+.structures-nb{
+  margin-top: 1rem;
+  margin-bottom: 0;
+  color: gray;
+}
+
+.structures-none{
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  color: gray;
+}
+
+.structures-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  align-items: center;
+  justify-content: center;
+
+  .structures-card{
+    border: solid 1px lightgray;
+    margin: 1rem .5rem;
+    width: 45%;
+    padding: 2rem 1rem;
+
+    .structure-title{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      h4{
+        font-weight: 600;
+      }
+
+      .title-border{
+        width: 100%;
+        height: 1px;
+        background-color: lightgray;
+      }
+    }
+
+    .structure-info{
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        margin: 2rem 1rem;
+
+      p{
+        margin-bottom: .3rem;
+
+        span{
+          font-weight: 600;
+        }
+      }
+
+
+    }
+
+    .structure-btn{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+  }
 }
 
 @media screen and (max-width: 992px) {
