--- a/assets/styles/adminNavBar.scss
+++ b/assets/styles/adminNavBar.scss
@@ -76,40 +76,118 @@
   padding-bottom: 1rem;
   padding-left: 0;
 
-  li {
+}
 
-    line-height: 2.6rem;
-    padding-left: 2rem;
-    list-style: none;
-    cursor: pointer;
-    letter-spacing: 0.5px;
-    font-size: 0.8rem;
+svg{
+  vertical-align: sub;
+}
 
-    &:hover{
-      background-color: #1c4763;
+.link-li {
 
-      a{
-        color: #d7e8f4;
-      }
+  line-height: 2.6rem;
+  padding-left: 2rem;
+  list-style: none;
+  cursor: pointer;
+  letter-spacing: 0.5px;
+  font-size: .9rem;
 
-    }
+  &:hover{
+    background-color: #1c4763;
 
     a{
-      text-decoration: none;
-      color:#4c99cd;
-      font-weight: 600;
-      width: 100%;
-      height: 100%;
-      display: block;
+      color: #d7e8f4;
     }
+
+  }
+
+  a{
+    text-decoration: none;
+    color:#4c99cd;
+    font-weight: 600;
+    width: 100%;
+    height: 100%;
+    display: block;
+    line-height: 3rem;
   }
 }
 
+.ul-list{
+  padding-left: 0;
+  margin-bottom: 0;
+}
 
 .burger-btn, .close-btn{
   display: none;
   cursor: pointer;
 }
+
+.padding-svg{
+  padding-bottom: 2px;
+}
+
+.sub-li{
+  a{
+    padding-left: 1rem;
+    color: #88bbdd;
+  }
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.nav-accordion {
+  cursor: pointer;
+  font-weight: 600;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 1s ease;
+  line-height: 3rem;
+  background-color: #112B3C;
+  font-size: .9rem;
+  color: #4c99cd;
+
+}
+
+.nav-active {
+  background-color: #1c4763;
+  border-bottom: solid 1px #163950;
+  color: #d7e8f4;
+}
+
+.nav-accordion:hover {
+  background-color: #1c4763;
+  color: #d7e8f4;
+}
+
+.nav-panel {
+  padding: 0;
+  background-color: #163950;
+  display: none;
+  overflow: hidden;
+}
+
+@keyframes growing {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: fit-content;
+  }
+}
+
+@keyframes shrinking {
+  from {
+    height: fit-content;
+  }
+
+  to {
+    height: 0;
+  }
+}
+
+
+
 
 
 @media screen and (max-width: 992px) {
@@ -163,27 +241,30 @@
       padding-bottom: 1rem;
       padding-left: 0;
 
-      li{
-        padding-top: 0.7rem;
-        padding-bottom: 0.7rem;
-        padding-left: 2rem;
-
-        &:hover{
-          background-color: #1c4763;
-          color: white;
-
-          a{
-            color: #d7e8f4;
-          }
-
-        }
-
-        a{
+      ul{
+        padding-left: 0;
+        li{
+          padding-top: 0.7rem;
+          padding-bottom: 0.7rem;
+          padding-left: 2rem;
 
           &:hover{
-            color: #d7e8f4;
+            background-color: #1c4763;
+            color: white;
+
+            a{
+              color: #d7e8f4;
+            }
+
           }
-        }
+
+          a{
+
+            &:hover{
+              color: #d7e8f4;
+            }
+          }
+      }
       }
     }
 
