--- a/templates/Partials/_admin_navBar.html.twig
+++ b/templates/Partials/_admin_navBar.html.twig
@@ -18,10 +18,36 @@
 
 </nav>
 <nav class="side-bar">
-    <ul class="link-list">
-        <li class="link-li "><a href="{{ path('app_admin') }}">Tableau de bord</a></li>
-        <li class="link-li" id=""><a href="{{ path('app_admin_show_partners') }}">Partenaires</a></li>
-        <li class="link-li" id=""><a href="{{ path('app_admin_create_partner') }}">Nouveau partenaire</a></li>
-        <li class="link-li" id=""><a href="{{ path('app_admin_create_structure') }}">Nouvelle structure</a></li>
-    </ul>
+    <div class="link-list">
+        <ul class="ul-list">
+            <li class="link-li "><a href="{{ path('app_admin') }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-data-fill" viewBox="0 0 16 16">
+                        <path d="M10 .5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5.5.5 0 0 1-.5.5.5.5 0 0 0-.5.5V2a.5.5 0 0 0 .5.5h5A.5.5 0 0 0 11 2v-.5a.5.5 0 0 0-.5-.5.5.5 0 0 1-.5-.5Z"/>
+                        <path d="M4.085 1H3.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1h-.585c.055.156.085.325.085.5V2a1.5 1.5 0 0 1-1.5 1.5h-5A1.5 1.5 0 0 1 4 2v-.5c0-.175.03-.344.085-.5ZM10 7a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V7Zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0v-1Zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0V9a1 1 0 0 1 1-1Z"/>
+                    </svg>  Tableau de bord</a></li>
+        </ul>
+        <button class="nav-accordion link-li"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
+                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/>
+            </svg> Partenaires</button>
+        <div class="nav-panel">
+            <ul class="ul-list">
+                <li class="link-li sub-li" ><a href="{{ path('app_admin_show_partners') }}">Liste des partenaires</a></li>
+                <li class="link-li sub-li" ><a href="{{ path('app_admin_create_partner') }}">Nouveau partenaire</a></li>
+                <li class="link-li sub-li" ><a href="#">En attente de vérification</a></li>
+            </ul>
+        </div>
+        <button class="nav-accordion link-li"><svg xmlns="http://www.w3.org/2000/svg" class="padding-svg" width="16" height="16" fill="currentColor" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M336 0C362.5 0 384 21.49 384 48V464C384 490.5 362.5 512 336 512H240V432C240 405.5 218.5 384 192 384C165.5 384 144 405.5 144 432V512H48C21.49 512 0 490.5 0 464V48C0 21.49 21.49 0 48 0H336zM64 272C64 280.8 71.16 288 80 288H112C120.8 288 128 280.8 128 272V240C128 231.2 120.8 224 112 224H80C71.16 224 64 231.2 64 240V272zM176 224C167.2 224 160 231.2 160 240V272C160 280.8 167.2 288 176 288H208C216.8 288 224 280.8 224 272V240C224 231.2 216.8 224 208 224H176zM256 272C256 280.8 263.2 288 272 288H304C312.8 288 320 280.8 320 272V240C320 231.2 312.8 224 304 224H272C263.2 224 256 231.2 256 240V272zM80 96C71.16 96 64 103.2 64 112V144C64 152.8 71.16 160 80 160H112C120.8 160 128 152.8 128 144V112C128 103.2 120.8 96 112 96H80zM160 144C160 152.8 167.2 160 176 160H208C216.8 160 224 152.8 224 144V112C224 103.2 216.8 96 208 96H176C167.2 96 160 103.2 160 112V144zM272 96C263.2 96 256 103.2 256 112V144C256 152.8 263.2 160 272 160H304C312.8 160 320 152.8 320 144V112C320 103.2 312.8 96 304 96H272z"/></svg>
+              Structures</button>
+        <div class="nav-panel">
+            <ul class="ul-list">
+                <li class="link-li sub-li" ><a href="{{ path('app_admin_create_structure') }}">Nouvelle structure</a></li>
+                <li class="link-li sub-li" ><a href="#">En attente de vérification</a></li>
+            </ul>
+        </div>
+        <ul class="ul-list">
+            <li class="link-li" id=""><a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="padding-svg" width="16" height="16" fill="currentColor"  viewBox="0 0 16 16">
+                        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                    </svg>  Besoin d'aide</a></li>
+        </ul>
+    </div>
+
 </nav>
