--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -1,70 +1,189 @@
-
-.main-container{
+.main-container {
   background-color: #f3f9fc;
   position: absolute;
   top: 8vh;
   left: 20%;
   width: 80%;
   min-height: 92%;
-  padding: 3rem 6rem;
+  padding: 1rem 1rem;
+}
+
+.white-card{
+  background-color: white;
+  border: solid 1px lightgray;
+  padding: 1rem 2rem;
+  margin-bottom: 1.5rem;
+
+  //&:hover{
+  //  box-shadow: 0 0 10px 2px lightgray;
+
+  //}
+
+}
+
+.dashboard-border{
+  height: 1px;
+  background-color: lightgray;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+h2{
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+}
 
 
-  .hi-manager{
+h3{
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  font-weight: 600;
+  color: #112B3C;
+}
 
-     display: flex;
-    flex-direction: row;
-    align-items: end;
-    margin-bottom: 3rem;
+.dashboard-content{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+}
 
-    .wave-icon{
-        background: url('../pictures/icons8-comme-ci-comme-ça-80.png') no-repeat;
-        background-size: cover;
-        height: 2rem;
-        width: 2rem;
-        margin-right: 1rem;
-    }
+.dashboard-title{
+  width: 100%;
+}
 
-    h2{
-      margin-bottom: 0;
-      font-size: 1.5rem;
-      color: gray;
-    }
+.dashboard-users{
+  width: 68%;
+}
 
+.dashboard-stats{
+  width: 30%;
+  height: available;
+}
 
-  }
-
-  h3{
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
-    font-weight: 600;
-
-    color: black;
-  }
-
+.dashboard-sections{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+  width: 100%;
 }
 
 .dashboard-cards{
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   justify-content: space-between;
 
-  .dashboard-card{
+  h4{
+    color: #2c70a0;
+    font-weight: 700;
+    font-size: 1.4rem;
+  }
 
-    height: 25vh;
+  .dashboard-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1rem;
+
+    .dashboard-card{
+      display: flex;
+      flex-direction: column;
+      height: 35%;
+      background-color: white;
+      border: solid 1px lightgray;
+      width: 32% ;
+      padding: 1rem;
+      border-left: solid 3px #4c99cd ;
+
+
+      .title-card{
+        text-align: start;
+
+        h5{
+          color: gray;
+          font-size: .8rem;
+        }
+      }
+
+    }
+  }
+}
+
+.dashboard-stats{
+  display: flex;
+  height: 100%;
+}
+
+.dashboard-second-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 1rem;
+
+  .dashboard-card{
+    display: flex;
+    flex-direction: column;
+    height: 35%;
     background-color: white;
     border: solid 1px lightgray;
-    width: 20vw ;
+    width: 49% ;
     padding: 1rem;
-    border-left: solid 5px #4c99cd ;
+    border-left: solid 3px #4c99cd ;
 
-    h4{
-      color: gray;
-      font-size: 1rem;
+
+    .title-card{
+      text-align: start;
+
+      h5{
+        color: gray;
+        font-size: .8rem;
+      }
     }
 
-
   }
+}
+
+.no-margin{
+  margin-bottom: 0;
+}
+
+.stat-content{
+  padding: 1rem;
+  background-color: #f7f7f7;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  p{
+    color: #333333;
+    font-size: 0.8rem;
+  }
+
+  ul{
+
+    list-style: none;
+    padding-left: 0;
+
+    li{
+      color: #333333;
+      font-size: 0.8rem;
+    }
+  }
+
+
+}
+
+h6{
+  color: #2c70a0;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
 
 .card-content{
