--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -195,7 +195,7 @@
                 </div>
             </div>
         <div class="dashboard-stats">
-            <div class="white-card">
+            <div class="white-card stats-content">
                 <div class="stats-card">
                     <h6>Connecté : </h6>
                     <div class="dashboard-border no-margin"></div>
