--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -5,7 +5,8 @@
   left: 20%;
   width: 80%;
   min-height: 92%;
-  padding: 1rem 1rem;
+  padding: 1rem;
+  padding-bottom: 0;
 }
 
 .white-card{
@@ -102,6 +103,7 @@ h3{
 
       .title-card{
         text-align: start;
+        height: 1.5rem;
 
         h5{
           color: gray;
@@ -139,6 +141,7 @@ h3{
 
     .title-card{
       text-align: start;
+      height: 1.5rem;
 
       h5{
         color: gray;
@@ -191,13 +194,13 @@ h6{
   flex-direction: row;
   align-items:center;
   justify-content: center;
-  margin: 2rem;
+  margin: 1.5rem;
   height: 3rem;
 
   div{
     text-align: center;
-    width: 2rem;
-    height: 2rem;
+    min-width: 32px;
+    height: 32px;
     border-radius: 50%;
     border: solid .5px #c4dfed;
     background-color: #ebf4f9;
@@ -213,34 +216,79 @@ h6{
 }
 
 
+
 @media screen and (max-width: 992px) {
 
-   .dashboard-cards{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-     justify-content: center;
-     width: inherit;
 
-      .dashboard-card{
-       width: 70vw;
-       height: 30vh;
-       border: solid 1px lightgray;
-       border-bottom: solid 5px #4c99cd ;
-       margin: 1rem 0;
-
-      }
-
-   }
-
-  .main-container{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    width: 100%;
+  .main-container {
+    background-color: #f3f9fc;
+    position: absolute;
+    top: 8vh;
     left: 0;
-    right: 0;
-
+    width: 100%;
+    min-height: 92%;
+    padding: 1rem 1rem;
   }
 
+  .dashboard-users {
+    .dashboard-cards{
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 852px) {
+  .dashboard-sections{
+    flex-direction: column;
+  }
+
+  .dashboard-users {
+    width: 100%;
+  }
+
+  .dashboard-stats {
+    display: flex;
+    width: 100%;
+
+    .stats-content {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .dashboard-cards {
+    .dashboard-row {
+      flex-direction: column;
+      justify-content: start;
+      margin-bottom: 0;
+    }
+  }
+  .dashboard-second-row{
+    flex-direction: column;
+  }
+
+  .dashboard-cards .dashboard-row .dashboard-card{
+    height: 20%;
+    width: 100% ;
+    padding: 1rem;
+    margin-top: 1rem;
+
+    .card-content{
+      margin: 1rem;
+      height: 1rem ;
+    }
+  }
+
+  .dashboard-second-row .dashboard-card{
+    height: 20%;
+    width: 100% ;
+    padding: 1rem;
+    margin-top: 1rem;
+
+    .card-content{
+      margin: 1rem;
+      height: 1rem ;
+    }
+  }
 }
