--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -263,12 +263,25 @@ h6{
 
   .dashboard-cards .dashboard-row .dashboard-card .title-card h5 {
     color: gray;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .dashboard-second-row .dashboard-card .title-card h5 {
     color: gray;
-    font-size: 1.2rem;
+    font-size: 1rem;
+  }
+
+  h6 {
+    font-size: 1rem;
+  }
+
+  .stat-content p {
+
+    font-size: 1rem;
+  }
+
+  .stat-content ul li {
+    font-size: 1rem;
   }
 
   .dashboard-cards {
