--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -261,6 +261,25 @@ h6{
     padding: 1rem .8rem;
   }
 
+  .dashboard-users{
+
+    .white-card{
+      background-color: white;
+      border: none;
+      padding: 0 .5rem;
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  .dashboard-stats{
+    .white-card{
+      background-color: white;
+      border: none;
+      padding: 0;
+      margin-bottom: 1.5rem;
+    }
+  }
+
   .dashboard-cards .dashboard-row .dashboard-card .title-card h5 {
     color: gray;
     font-size: 1rem;
