responsive search page

--- a/templates/admin/admin_show_partners.html.twig
+++ b/templates/admin/admin_show_partners.html.twig
@@ -33,6 +33,7 @@
 
         </form>
     </div>
+    <p class="number-structure">Nombre de résultats : {{ partners|length }}</p>
     <div id="content">
         {% include 'Partials/_content.html.twig' %}
     </div>
