--- a/assets/styles/partners.scss
+++ b/assets/styles/partners.scss
@@ -13,10 +13,9 @@ h2{
   font-weight: 600;
 }
 
-#content{
-  .number-structure{
-    color: gray;
-  }
+
+.number-structure{
+  color: gray;
 }
 
 .filter-bar{
@@ -157,13 +156,83 @@ h2{
 @media screen and (max-width: 992px) {
 
   .main-container{
-    display: flex;
+    background-color: #f3f9fc;
+    position: absolute;
+    top: 8vh;
+    left: 0;
+    width: 100%;
+    min-height: 92%;
+    padding: 1rem 2rem;
+  }
+
+}
+
+
+@media screen and (max-width: 576px) {
+  .main-container{
+    padding: 1rem;
+  }
+
+  .filter-bar {
     flex-direction: column;
     align-items: start;
+    background-color: unset;
+    border: unset;
+    padding: 1rem 0;
+    margin-bottom: .5rem;
+
+    &:hover{
+      box-shadow: unset;
+    }
+  }
+
+  .filter-bar input {
+    height: 2.5rem;
     width: 100%;
-    left: 0;
-    right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .partners-card{
+    flex-direction: column;
+    width: 75%;
+    height: 60%;
 
   }
 
+  .partners-card .person-svg{
+    width: 100%;
+    height: 180px;
+  }
+
+  .partner-card{
+    width: 100%;
+    flex-direction: column;
+    padding: 1rem;
+    height: 255px;
+  }
+
+  .partner-card .partner-titles {
+    width: 100%;
+    padding-bottom: .5rem;
+
+    p{
+      word-break: break-word;
+    }
+  }
+
+  .partner-card .partner-titles h3{
+    font-size: 1.4rem;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+
+
+  #content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
