page links modify

--- a/templates/Partials/_content.html.twig
+++ b/templates/Partials/_content.html.twig
@@ -20,7 +20,7 @@
                     <p class="title"><span>Adresse email :</span> {{ partner.user.email }}</p>
                 </div>
             </div>
-            <div class="page-link">
+            <div class="pagelink">
             <a href="{{ path('app_admin_show_partner', {slug: partner.slug }) }}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#4c99cd" class="bi bi-eye-fill" viewBox="0 0 16 16">
                     <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
