--- a/assets/styles/partners.scss
+++ b/assets/styles/partners.scss
@@ -125,7 +125,7 @@ h2{
   }
 }
 
-.page-link{
+.pagelink{
 
   a{
     display: flex;
@@ -173,6 +173,11 @@ h2{
     padding: 1rem;
   }
 
+  .partner-card .partner-titles{
+    justify-content: start;
+  }
+
+
   .filter-bar {
     flex-direction: column;
     align-items: start;
@@ -208,7 +213,7 @@ h2{
     width: 100%;
     flex-direction: column;
     padding: 1rem;
-    height: 255px;
+    min-height: 255px;
   }
 
   .partner-card .partner-titles {
@@ -222,14 +227,16 @@ h2{
 
   .partner-card .partner-titles h3{
     font-size: 1.4rem;
+    word-break: break-word;
+
     width: 100%;
     text-align: center;
-    margin-bottom: 1rem;
   }
 
-  .page-link a{
+  .pagelink a{
     height: 48px;
     width: 48px;
+    margin-bottom: .5rem;
   }
 
   #content{
