--- a/assets/styles/adminNavBar.scss
+++ b/assets/styles/adminNavBar.scss
@@ -243,8 +243,8 @@ svg{
       ul{
         padding-left: 0;
         li{
-          padding-top: 0.7rem;
-          padding-bottom: 0.7rem;
+          padding-top: 0;
+          padding-bottom: 0;
           padding-left: 2rem;
 
           &:hover{
