--- a/templates/admin/admin_new_partner.html.twig
+++ b/templates/admin/admin_new_partner.html.twig
@@ -25,7 +25,7 @@
     {{ form_row(partnerForm.partner.name) }}
     {{ form_row(partnerForm.user.email) }}
     {{ form_row(partnerForm.user.plainPassword, {
-        label: 'Mot de passe :'
+        label: 'Mot de passe '
     }) }}
 <div class="form-btn">
     <button type="submit" class="btn submit-btn ">Ajouter le partenaire</button>
