--- a/assets/styles/formAdd.scss
+++ b/assets/styles/formAdd.scss
@@ -33,6 +33,7 @@ h2{
 
     label{
       width: 30%;
+      color: #4d4d4d;
     }
   }
 
@@ -84,11 +85,45 @@ form{
   .main-container{
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     width: 100%;
     left: 0;
     right: 0;
 
+  }
+
+  .submit-btn{
+    margin-top: 2rem;
+  }
+
+  .form-add{
+    width: 100%;
+  }
+
+  .form-add div{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: .5rem;
+  }
+
+  .form-add div label{
+    width: 100%;
+  }
+
+}
+
+@media screen and (max-width: 576px) {
+
+  .main-container{
+    padding: 1rem;
+  }
+
+  .form-add{
+    padding: 1rem 1.5rem;
+  }
+
+  .submit-btn{
+    width: 100%;
   }
 
 }
