--- a/templates/admin/admin_new_structure.html.twig
+++ b/templates/admin/admin_new_structure.html.twig
@@ -25,7 +25,7 @@
     {{ form_row(structureForm.structure.partner) }}
     {{ form_row(structureForm.user.email) }}
     {{ form_row(structureForm.user.plainPassword, {
-        label: 'Mot de passe :'
+        label: 'Mot de passe '
     }) }}
     {{ form_row(structureForm.structure.address) }}
     {{ form_row(structureForm.structure.zipcode) }}
