--- a/templates/admin/admin_show_structure.html.twig
+++ b/templates/admin/admin_show_structure.html.twig
@@ -19,6 +19,8 @@
 
     {% include 'Partials/_admin_navBar.html.twig' %}
 <div class="main-container">
+    <a  class ='return-btn' href="{{ app.request.headers.get('referer') }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
+        Retour</a>
     <h2>Structure - {{ structure.address}} </h2>
 
     <div class="infos-div white-card">
