--- a/templates/admin/admin_show_unverified.html.twig
+++ b/templates/admin/admin_show_unverified.html.twig
@@ -27,8 +27,8 @@
                 <tr>
                     <th scope="col" class="nb-th">#</th>
                     <th scope="col" class="email-th">Email</th>
-                    <th scope="col">Rôle</th>
-                    <th scope="col">Confirmation</th>
+                    <th scope="col" class="role-th">Rôle</th>
+                    <th scope="col" class="btn-th">Confirmation</th>
                 </tr>
                 </thead>
                 <tbody>
