--- a/templates/partner/partner.html.twig
+++ b/templates/partner/partner.html.twig
@@ -2,6 +2,17 @@
 
 {% block title %}Hello PartnerController!{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('build/read.css') }}">
+
+{% endblock%}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('read') }}
+
+{% endblock%}
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
