--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
                 <h2 class="h3 mb-3 font-weight-normal">Connexion</h2>
                 <div class="form-inputs">
                     <label for="inputEmail">Email</label>
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required>
                     <label for="inputPassword">Mot de passe</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
@@ -49,11 +49,11 @@
                         </label>
                     </div>
                 #}
-                <a href="{{ path('app_reset_pass') }}">Mot de passe oublié</a>
-
                 <button class="btn btn-lg btn-primary" type="submit">
                     Se connecter
                 </button>
+
+                <a href="{{ path('app_reset_pass') }}" class="mt-1">Mot de passe oublié</a>
             </form>
         </div>
     </div>
