--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -31,11 +31,11 @@ h1{
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   border: 1px solid rgba(255, 255, 255, 0.18);
   border-radius: 10px;
-  padding: 3rem 0;
+  padding: 3rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 30vw;
+  width: 35vw;
 
   form{
     display: flex;
@@ -67,6 +67,11 @@ h1{
   }
 
 }
+
+.reset-p{
+  text-align: center;
+}
+
 
 @media screen and (max-width: 992px) {
    .form-container{
