--- a/templates/structure/structure.html.twig
+++ b/templates/structure/structure.html.twig
@@ -2,6 +2,17 @@
 
 {% block title %}Hello StructureController!{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('build/read.css') }}">
+
+{% endblock%}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('read') }}
+
+{% endblock%}
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
@@ -9,7 +20,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello {{ structure.user.email }}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
