--- a/templates/security/reset_pass.html.twig
+++ b/templates/security/reset_pass.html.twig
@@ -23,7 +23,7 @@
                 {{ form_start(resetPassForm) }}
                 {{ form_row(resetPassForm.email) }}
 
-                <button type="submit" class="btn">Valider</button>
+                <button type="submit" class="btn btn-lg btn-primary">Valider</button>
                 {{ form_end(resetPassForm) }}
 
             </form>
