--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -9,33 +9,71 @@
   align-items: center;
 }
 
-h1{
+/*h1{
   text-transform: uppercase;
   margin-bottom: 2rem;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
   font-style: italic;
-  color: white;
-
+  color: black;
+  text-align: center;
 
   span{
 
     color: #4c99cd;
   }
+}*/
+
+.logo-img{
+  width: 50px;
+  height: 50px;
+  background: url("../pictures/logo-fc.png") no-repeat top;
+  background-size: cover;
+  align-self: center;
+  margin-bottom: 1.5rem;
 }
 
+
+h2{
+  font-weight: 700;
+
+}
+
+
+.login-btn {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(100deg, rgba(2, 0, 36, 1) 0%, rgba(55, 140, 200, 1) 100%, rgba(0, 212, 255, 1) 100%);
+  /*background-color: #378cc8;*/
+  color: white;
+  font-size: 1rem;
+  border: solid 1px #2c70a0;
+  width: 100%;
+  line-height: 1.8rem;
+  padding: 0.2rem 0.75rem;
+  border-radius: 15px;
+  border: unset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
+  &:hover {
+    /*background-color: #2c70a0;*/
+    background: rgb(2, 0, 36);
+    background: linear-gradient(100deg, rgba(2, 0, 36, 1) 0%, rgba(44, 112, 160, 1) 100%, rgba(0, 212, 255, 1) 100%);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+  }
+}
+
+
 .form-container{
-  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba( 255, 255, 255, 0));
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.98);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   border: 1px solid rgba(255, 255, 255, 0.18);
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 3rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 35vw;
+  width: 27vw;
 
   form{
     display: flex;
@@ -44,24 +82,9 @@ h1{
     align-items: center;
 
     .form-inputs{
-      margin: 2rem 0;
-      width: 80%;
+      margin: 1.5rem 0;
+      width: 100%;
 
-
-      input{
-        margin-bottom: 0.8rem;
-      }
-    }
-
-    button{
-      background-color: #378cc8;
-      font-size: 1rem;
-      border: solid 1px #2c70a0;
-
-      &:hover{
-        background-color: #2c70a0;
-        border: solid 1px #2c70a0;
-      }
     }
 
   }
@@ -70,6 +93,42 @@ h1{
 
 .reset-p{
   text-align: center;
+}
+
+.form-field{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: baseline;
+
+  input{
+    margin-bottom: 0.8rem;
+    width: 90%;
+  }
+
+  label{
+    width:10%;
+
+    svg{
+      width: 26px;
+      height: 26px;
+      padding-bottom: 5px;
+      color: gray;
+    }
+
+  }
+}
+
+.reset-pass{
+  text-decoration: none;
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  color:#3993D4;
+
+  &:hover{
+    color:  #2c70a0;
+  }
 }
 
 
