--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -135,13 +135,19 @@ h2{
 @media screen and (max-width: 992px) {
    .form-container{
 
-     width: 80vw;
+     width: 90vw;
      height: 70vh;
+     padding: 2rem 1rem;
    }
-
-  h1{
-    font-size: 2rem;
-    -webkit-text-stroke: unset;
+  .form-field label {
+    width: 20%;
   }
+
+  .form-field input{
+    width: 80%;
+    margin-left: 7px;
+  }
+
+
 
 }
