--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -25,9 +25,9 @@
 }*/
 
 .logo-img{
-  width: 50px;
-  height: 50px;
-  background: url("../pictures/logo-fc.png") no-repeat top;
+  width: 60px;
+  height: 60px;
+  background: url("../pictures/logo2-fc.png") no-repeat top;
   background-size: cover;
   align-self: center;
   margin-bottom: 1.5rem;
