--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -59,7 +59,7 @@
                         </label>
                     </div>
                 #}
-                <button class="login-btn" type="submit">
+                <button class="mainForm-btn" type="submit">
                     Se connecter
                 </button>
 
