--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -36,11 +36,16 @@
 
 h2{
   font-weight: 700;
+  text-align: center;
+}
 
+.reset-title{
+  font-size: 1.7rem;
 }
 
 
-.login-btn {
+
+.mainForm-btn {
   background: rgb(2, 0, 36);
   background: linear-gradient(100deg, rgba(2, 0, 36, 1) 0%, rgba(55, 140, 200, 1) 100%, rgba(0, 212, 255, 1) 100%);
   /*background-color: #378cc8;*/
@@ -85,6 +90,10 @@ h2{
       margin: 1.5rem 0;
       width: 100%;
 
+    }
+
+    .reset-input{
+      width:100%;
     }
 
   }
