--- a/templates/security/reset_pass.html.twig
+++ b/templates/security/reset_pass.html.twig
@@ -24,7 +24,7 @@
                 {{ form_row(resetPassForm.email) }}
                 <button type="submit" class="mainForm-btn">Valider</button>
                 {{ form_end(resetPassForm) }}
-
+                <a href="{{ path('app_login') }}" class="reset-pass">Retour</a>
             </form>
         </div>
     </div>
