--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -130,6 +130,7 @@ h2{
 
 .reset-pass{
   text-decoration: none;
+  text-align: center;
   margin-top: 1rem;
   font-size: 0.8rem;
   font-weight: 700;
