--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,6 +6,46 @@ body{
 }
 
 
-
 @import "~bootstrap/scss/bootstrap";
 
+
+.flash-messages{
+    position: absolute;
+    top: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 4rem;
+    width: 50%;
+    background-color: #c1f1d5;
+    border: solid 1px #27ae60;
+    border-radius: 5px;
+    opacity: 0;
+    animation: flash 4s ease;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 2rem;
+
+    .flash-success-content{
+        color: #27ae60;
+        margin-bottom: 0;
+    }
+}
+
+@keyframes flash {
+    0%{
+        opacity: 0;
+    }
+
+    25%{
+        opacity: 1;
+    }
+
+    90%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
