--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,29 @@
         {% endblock %}
     </head>
     <body>
+    {% for message in app.flashes('success') %}
+        <div class="flash-messages">
+            <div class="flash-message-success"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#27ae60" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                </svg></div>
+            <p class="flash-success-content">
+            {{ message }}
+            </p>
+            <div class="flash-message-close"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000000" class="bi bi-x" viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                </svg></div>
+        </div>
+    {% endfor %}
+    {% for message in app.flashes('danger') %}
+        <div class="flash-danger-messages">
+            <div class="flash-message-danger"></div>
+            <p class="flash-danger-content">
+                {{ message }}
+            </p>
+            <div class="flash-message-close"></div>
+        </div>
+    {% endfor %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
