--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,7 +26,7 @@
 
                 {% if app.user %}
                     <div class="mb-3">
-                        Vous êtes connecté(e) en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                        Vous êtes connecté(e) en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
                     </div>
                 {% endif %}
 
