--- a/templates/registration/confirmation_structure_email.html.twig
+++ b/templates/registration/confirmation_structure_email.html.twig
@@ -1,4 +1,47 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+    *{
+        font-family: 'Poppins', sans-serif;
+    }
+
+    h1{
+        color: black;
+        text-align: center;
+    }
+
+    a{
+        text-align: center;
+        text-decoration: none;
+        margin: auto 0;
+        background: rgb(2, 0, 36);
+        background: linear-gradient(100deg, rgba(2, 0, 36, 1) 0%, rgba(55, 140, 200, 1) 100%, rgba(0, 212, 255, 1) 100%);
+        /*background-color: #378cc8;*/
+        color: white;
+        font-size: 1rem;
+        border: solid 1px #2c70a0;
+        width: fit-content;
+        line-height: 1.4rem;
+        padding: .4rem 1.5rem;
+        border-radius: 15px;
+        border: unset;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
+    a:hover {
+        /*background-color: #2c70a0;*/
+        background: rgb(2, 0, 36);
+        background: linear-gradient(100deg, rgba(2, 0, 36, 1) 0%, rgba(44, 112, 160, 1) 100%, rgba(0, 212, 255, 1) 100%);
+        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+    }
+
+    .redirect-btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+</style>
 
 <div class="text-center">
 <h1>Veuillez confirmer votre compte</h1><br>
@@ -8,11 +51,12 @@
     <p>Voici vos identifiants :</p>
     <p>Adresse email : {{ user.email }}</p>
     <p>Mot de passe : {{ password }}</p>
-    <p>Veuillez confirmer votre adresse email en cliquant sur le lien suivant :</p><br><br>
-    <a href="{{ signedUrl }}" class="btn btn-primary">Confirmer mon adresse email</a><br><br>
+    <p>Veuillez confirmer votre adresse email en cliquant sur le lien suivant :</p>
+    <div class="redirect-btn">
+        <a href="{{ signedUrl }}" class="btn btn-primary">Confirmer mon adresse email</a>
+    </div>
     <p>Un nouveau mot de passe vous sera demandé après votre première connexion.</p>
-    <p>Ce lien expire dans une heure.</p><br>
-
+    <p>Ce lien expire dans une heure.</p>
 
     <p>Cordialement,</p><br>
 
