--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Fitness Club{% endblock %}
+{% block title %}Fitness Club - Tableau de bord{% endblock %}
 
 
 
@@ -228,10 +228,10 @@
                     <div class="dashboard-border no-margin"></div>
                     <div class="stat-content">
                         <ul>
-                            <li>- Envoi Newsletter</li>
-                            <li>- Gestion des plannings</li>
-                            <li>- Vente de boissons</li>
-                            <li>- Accès cours vidéos</li>
+                            <li class="permission-granted">Envoi de la Newsletter</li>
+                            <li class="permission-granted">Gestion des plannings</li>
+                            <li class="permission-granted">Vente de boissons</li>
+                            <li class="permission-granted">Accès aux cours vidéos</li>
                         </ul>
                     </div>
                 </div>
