--- a/templates/admin/admin_show_unverified.html.twig
+++ b/templates/admin/admin_show_unverified.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Partenaires{% endblock %}
+{% block title %}Fitness Club - Utilisateurs non vérifiés{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
