--- a/templates/structure/structure.html.twig
+++ b/templates/structure/structure.html.twig
@@ -19,13 +19,67 @@
     {% include 'Partials/_navBar.html.twig' %}
 
 
-<div class="example-wrapper">
-    <h1>Hello {{ structure.user.email }}! ✅</h1>
+<div class="main-container">
+    <div class="main-content-div">
+        <div class="main-content">
+            <div class="title">
+                <h2>{{ structure.address }}</h2>
+                <h3>{{ structure.city }} </h3>
+            </div>
+            <div class="info-structure">
+                <div>
+                    <h4><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                        </svg> Partenaire rattaché</h4>
+                    <p>Fitness Club - {{ structure.partner.name }}</p>
+                </div>
+                <div>
+                    <h4><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+                        </svg> Email du gérant</h4>
+                    <p>{{ structure.user.email }}</p>
+                </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/apps/Fitness-club-app/src/Controller/StructureController.php'|file_link(0) }}">src/Controller/StructureController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/apps/Fitness-club-app/templates/structure/admin.html.twig'|file_link(0) }}">templates/structure/index.html.twig</a></code></li>
-    </ul>
+                <div>
+                    <h4><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg> Adresse complète</h4>
+                    <p>{{ structure.address }}</p>
+                    <p>{{ structure.zipcode }} - {{ structure.city }}</p>
+                </div>
+                <div>
+                    <h4><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                        </svg> Permissions accordées</h4>
+                    <ul>
+                        {% if permissions.newsletter  == 1 %}
+                            <li>Envoi de la Newsletter</li>
+                        {% endif %}
+                        {% if permissions.planningManagement  == 1 %}
+                            <li>Gestion des plannings</li>
+                        {% endif %}
+                        {% if permissions.drinkSales  == 1 %}
+                            <li>Vente de boissons</li>
+                        {% endif %}
+                        {% if permissions.videoCourses  == 1 %}
+                            <li>Accès aux cours vidéos</li>
+                        {% endif %}
+                        {% if permissions.prospectReminders  == 1 %}
+                            <li>Relance des prospects</li>
+                        {% endif %}
+                        {% if permissions.sponsorship  == 1 %}
+                            <li>Parrainage</li>
+                        {% endif %}
+                        {% if permissions.freeWifi  == 1 %}
+                            <li>Wifi gratuit</li>
+                        {% endif %}
+                        {% if permissions.flexibleHours  == 1 %}
+                            <li>Flexibilité des horaires</li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
