partner user view + structures div

--- a/assets/styles/navBar.scss
+++ b/assets/styles/navBar.scss
@@ -14,7 +14,7 @@
   color: #112B3C;
   border-bottom: solid 1px #0a1d29;
   z-index: 1;
-  box-shadow: 5px 8px 20px 10px #0a1d29;
+  box-shadow: 5px 8px 15px 2px rgba(10, 29, 41, 0.94);
 
   .logo{
 
